#1 首页 静态页面

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,6 +18,8 @@ a, ul, li {
 .fr{float: right;}
 .hidden {display: none;}
 
+.clear {clear: both}
+
 .ui-header{
     background-color: #1ABC9C;
     width: 100%;
